--- a/appsettings.json
+++ b/appsettings.json
@@ -2,7 +2,8 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "myDb1": "server=192.168.0.94;port=3306;database=gestao;uid=root;pwd=301082"
     }
   },
   "AllowedHosts": "*"
