--- a/appsettings.json
+++ b/appsettings.json
@@ -3,7 +3,7 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
-      "myDb1": "server=192.168.0.94;port=3306;database=gestao;uid=root;pwd=301082"
+      "myDb1": "server;port=;database=;uid=;pwd=;password="
     }
   },
   "AllowedHosts": "*"
